fix: take quotes into account when determining where to wrap

--- a/tests/basic-functionality/input.css
+++ b/tests/basic-functionality/input.css
@@ -1,1 +1,1 @@
-html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
+html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{font-family:Avenir,"Franklin Gothic",Futura,"Proxima Nova",Raleway,"Roboto Regular",sans-serif;margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
